--- a/main.ipynb
+++ b/main.ipynb
@@ -5,13 +5,22 @@
    "execution_count": null,
    "id": "0221d9b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wenhao/projects/Hilbert scheme/math_env/lib/python3.12/site-packages/jieba/_compat.py:18: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "from dotenv import load_dotenv\n",
     "from langchain_community.document_loaders import PyPDFLoader,TextLoader\n",
     "from langchain_community.vectorstores import Chroma\n",
-    "from langchain_community.embeddings import DashScopeEmbeddings\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings, DashScopeEmbeddings\n",
     "from langchain_community.chat_message_histories import ChatMessageHistory\n",
     "from langchain_community.chat_models import ChatTongyi\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
@@ -22,7 +31,22 @@
     "from dashscope.rerank.text_rerank import TextReRank\n",
     "from operator import itemgetter\n",
     "from pylatexenc.latexwalker import LatexWalker, LatexEnvironmentNode\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter"
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_core.documents import Document\n",
+    "from rank_bm25 import BM25Okapi\n",
+    "# import jieba  # 中文分词（如处理中文）\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "43f31804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.vectorstores import FAISS"
    ]
   },
   {
@@ -35,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9c2e775f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load_dotenv()\n",
-    "os.environ[\"DASHSCOPE_API_KEY\"] = \"your_dashcope_api_key\""
+    "os.environ[\"DASHSCOPE_API_KEY\"] = \"sk-55e981aa134b4c93a5a616d71f1ed301\""
    ]
   },
   {
@@ -54,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85c38a69",
    "metadata": {},
    "outputs": [],
@@ -80,7 +104,7 @@
     "#             lw = LatexWalker(text)\n",
     "#             nodelist, _, _ = lw.get_latex_nodes(pos=0)\n",
     "#         except Exception as e:\n",
-    "#             print(f\"⚠️ LaTeX parsing failed for {metadata.get('source', 'unknown')}, falling back to plain split: {e}\")\n",
+    "#             print(f\" LaTeX parsing failed for {metadata.get('source', 'unknown')}, falling back to plain split: {e}\")\n",
     "#             # 回退到普通文本分割\n",
     "#             fallback_splitter = RecursiveCharacterTextSplitter(\n",
     "#                 chunk_size=chunk_size,\n",
@@ -170,23 +194,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "80c9963a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 只是用 loader_3 作为外部文档\n",
-    "file_path_3=\"/./thesis-some chapter.txt\" \n",
+    "file_path_3=\"/home/wenhao/projects/Hilbert scheme/PDF/thesis-some chapter.txt\" \n",
     "loader_3 = TextLoader(file_path = file_path_3)\n",
     "docs = loader_3.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b58fd56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_63982/3591448706.py:30: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the `langchain-chroma package and should be used instead. To use it run `pip install -U `langchain-chroma` and import as `from `langchain_chroma import Chroma``.\n",
+      "  db = Chroma(persist_directory=persist_dir, embedding_function=embeddings)\n"
+     ]
+    }
+   ],
    "source": [
     "# 基于txt 格式的文档分割\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
@@ -223,9 +256,82 @@
     "        documents=splitte_docs,\n",
     "        embedding=embeddings,\n",
     "        persist_directory=persist_dir\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7e97ec",
+   "metadata": {},
+   "source": [
+    "混合检索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "78dd6e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 稠密搜索\n",
+    "from collections import defaultdict\n",
+    "retriever = db.as_retriever( search_kwargs={\"k\": 50} )\n",
+    "\n",
+    "\n",
+    "# 离散搜索\n",
+    "def tokenize(text):\n",
+    "    return text.lower().split()\n",
+    "\n",
+    "\n",
+    "tokenized_docs = [tokenize(doc.page_content) for doc in docs]\n",
+    "bm25 = BM25Okapi(tokenized_docs)\n",
+    "\n",
+    "def bm25_retrieve(query, k):\n",
+    "    tokenized_query = tokenize(query)\n",
+    "    scores = bm25.get_scores(tokenized_query)\n",
+    "    top_k_idx = sorted(range(len(scores)), key=lambda i: scores[i], reverse=True)[:k]\n",
+    "    return [docs[i] for i in top_k_idx]\n",
+    "\n",
+    "\n",
+    "# 合并去重， RRF（Reciprocal Rank Fusion）\n",
+    "def merge_results_rrf(vec_results, bm25_results, rrf_k=60):\n",
+    "    \"\"\"\n",
+    "    使用 Reciprocal Rank Fusion (RRF) 融合两个结果列表\n",
+    "    \"\"\"\n",
+    "    rrf_score = defaultdict(float)\n",
+    "    doc_map = {}  # page_content -> Document（保留首次出现的 Document 对象）\n",
+    "\n",
+    "    # 稠密检索结果贡献 RRF 分数（排名从 0 开始）\n",
+    "    for rank, doc in enumerate(vec_results):\n",
+    "        content = doc.page_content\n",
+    "        if content not in doc_map:\n",
+    "            doc_map[content] = doc\n",
+    "        rrf_score[content] += 1.0 / (rrf_k + rank + 1)\n",
+    "\n",
+    "    # 稀疏检索结果贡献 RRF 分数\n",
+    "    for rank, doc in enumerate(bm25_results):\n",
+    "        content = doc.page_content\n",
+    "        if content not in doc_map:\n",
+    "            doc_map[content] = doc\n",
+    "        rrf_score[content] += 1.0 / (rrf_k + rank + 1)\n",
+    "\n",
+    "    # 按 RRF 分数降序排序\n",
+    "    sorted_items = sorted(\n",
+    "        doc_map.items(),\n",
+    "        key=lambda x: rrf_score[x[0]],\n",
+    "        reverse=True\n",
     "    )\n",
     "\n",
-    "retriever = db.as_retriever( search_kwargs={\"k\": 20} )"
+    "    # 返回去重并按 RRF 排序的文档列表\n",
+    "    return [doc for _, doc in sorted_items]\n",
+    "\n",
+    "\n",
+    "def retriever_hybrid(query, top_k=20):\n",
+    "    vec_results = retriever.invoke(query)          \n",
+    "    bm25_results = bm25_retrieve(query, k=50)      \n",
+    "    merged = merge_results_rrf(vec_results, bm25_results)\n",
+    "    return merged[:top_k]  "
    ]
   },
   {
@@ -238,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f5adf10",
    "metadata": {},
    "outputs": [],
    "source": [
     "# reranker\n",
     "def rerank_retriever(query):\n",
-    "    docs = retriever.invoke(query)\n",
+    "    docs = retriever_hybrid(query)\n",
     "    clean_docs = [d for d in docs if d.page_content.strip()]\n",
     "    initial_docs = [d.page_content for d in clean_docs]\n",
     "\n",
@@ -266,7 +372,7 @@
     "    \n",
     "    reranked_docs = []\n",
     "    for item in response.output.results:\n",
-    "        idx = item.index  # ✅ 正确方式：使用 index\n",
+    "        idx = item.index  \n",
     "        if 0 <= idx < len(initial_docs):\n",
     "            text = initial_docs[idx]\n",
     "            if text in text_to_doc:\n",
@@ -285,33 +391,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "153554b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score: 0.3790\n",
-      "\\section{Punctual Hilbert schemes}\\label{Punctual Hilbert schemes}\n",
-      "----------------------------------------\n",
-      "Score: 0.6119\n",
-      "embedding. In general, even when the defining equations of punctual Hilbert schemes are known, it remains difficult to understand their geometry or to compute their invariants.\n",
-      "----------------------------------------\n",
-      "Score: 0.6227\n",
-      "The main objects of study in this article are the punctual Hilbert schemes of irreducible curve singularities defined over an algebraically closed field  $ k $  of characteristic～ $ 0 $ . Given a curve singularity  $ (C,O) $  and an integer  $ \\ell \\in \\mathbb{N} $ , the  $ \\ell $ -th punctual Hilbert scheme of  $ (C,O) $ , denoted  $ C^{[\\ell]} $ , is the moduli space parametrizing  $ 0 $ -dimensional subschemes of  $ (C,O) $  of length  $ \\ell $ . This is a special case of Grothendieck's\n",
-      "----------------------------------------\n",
-      "Score: 0.6240\n",
-      "Recently, punctual Hilbert schemes have attracted considerable attention from two distinct but interconnected perspectives, both of which provide key motivations for this work.\n",
-      "On one hand, these schemes are the fundamental building blocks for the \\emph{motivic Hilbert zeta function}, introduced by Bejleri, Ranganathan and Vakil～\\cite{bejleri2020motivic}. This zeta function is defined as the generating series of the classes of punctual Hilbert schemes in the Grothendieck ring of varieties:\n",
-      "----------------------------------------\n",
-      "Score: 0.6811\n",
-      "For curve singularities with a single Puiseux pair, Oblomkov, Rasmussen, and Shende proved that the punctual Hilbert scheme  $ C^{[\\ell]} $  admits a stratification by affine spaces, a result that plays a foundational role in the motivic study of these moduli spaces.\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# query = \"What is Punctual Hilbert scheme?\"\n",
     "# results = db.similarity_search_with_score(query, k=5)\n",
@@ -339,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "01057885",
    "metadata": {},
    "outputs": [],
@@ -419,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "038ee858",
    "metadata": {},
    "outputs": [],
@@ -427,7 +510,6 @@
     "llm_rewriting_query = ChatTongyi(\n",
     "    model=\"qwen3-1.7b\",\n",
     "    temperature=0,\n",
-    "    api_key=os.getenv(\"DASHSCOPE_API_KEY\"),\n",
     "    model_kwargs={\"enable_thinking\": False}\n",
     ")\n",
     "\n",
@@ -450,14 +532,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "87aa4ee8",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "983f0755",
    "metadata": {},
    "outputs": [
@@ -465,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "轮次1: content='Hilbert scheme 是数学中一个重要的概念，主要用于研究几何对象（如曲线、曲面等）的子集的结构。\\n\\n简单来说，**Hilbert scheme** 是一个“空间”，它把具有某种特定性质的子集（比如长度为 $\\\\ell$ 的 0-维子集）全部“放在一起”，并按照某种方式分类。这个“空间”中的每一个点，对应一个特定的子集。\\n\\n举个例子：  \\n假设你有一个曲线 $C$，在它的某一点 $O$ 附近，你想研究所有“长度为 $\\\\ell$”的子集。这些子集可以看作是某些代数方程的解的集合。Hilbert scheme 就是把这些子集都收集起来，并给出它们的结构和性质。\\n\\n更具体地说，对于一个曲线奇点 $(C, O)$，它的 **$\\\\ell$-th punctual Hilbert scheme**（记作 $C^{[\\\\ell]}$）就是所有长度为 $\\\\ell$ 的 0-维子集的集合，这些子集都位于点 $O$ 附近。\\n\\nHilbert scheme 在代数几何中有广泛应用，特别是在研究几何对象的变形、对称性以及不变量等方面。' additional_kwargs={} response_metadata={'model_name': 'qwen-turbo', 'finish_reason': 'stop', 'request_id': 'bfbf9490-d852-437b-b2a8-483924b9044d', 'token_usage': {'input_tokens': 543, 'output_tokens': 262, 'prompt_tokens_details': {'cached_tokens': 0}, 'total_tokens': 805}} id='lc_run--019bc97f-7b10-77c2-adfd-9c07e156f2b7-0' tool_calls=[] invalid_tool_calls=[]\n",
+      "轮次1: content='Hilbert scheme 是数学中一个重要的概念，它用来“参数化”某些几何对象。具体来说，它是一个空间（可以理解为一种几何结构），其中的每一个点都对应着一个特定类型的子对象。\\n\\n举个简单的例子：假设你有一个几何图形，比如一条曲线，Hilbert scheme 就是用来“收集”所有在这个曲线上的有限子集（或者更一般的子结构）的集合。这些子集的大小（或者说“长度”）是固定的，比如都是由 5 个点组成的。\\n\\n在更抽象的数学语言中，Hilbert scheme 可以用来参数化某种代数结构，例如：\\n\\n- 在代数几何中，它参数化具有固定性质的子簇（subvarieties）；\\n- 在代数中，它可能参数化具有固定“余长”（colength）的理想（ideal）。\\n\\n简单来说，**Hilbert scheme 是一个用来分类和研究特定几何或代数对象的工具**，它把这些对象“放在一起”，形成一个整体的结构，便于我们研究它们的性质和相互关系。' additional_kwargs={} response_metadata={'model_name': 'qwen-turbo', 'finish_reason': 'stop', 'request_id': '57ae93a6-5b1a-4661-a8ad-53476a5e9a63', 'token_usage': {'input_tokens': 657, 'output_tokens': 234, 'prompt_tokens_details': {'cached_tokens': 0}, 'total_tokens': 891}} id='lc_run--019bfa96-38c9-7612-a15c-d8b1025ded38-0' tool_calls=[] invalid_tool_calls=[]\n",
       "\n"
      ]
     }
