--- a/main.ipynb
+++ b/main.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# load_dotenv()\n",
-    "os.environ[\"DASHSCOPE_API_KEY\"] = \"sk-55e981aa134b4c93a5a616d71f1ed301\""
+    "os.environ[\"DASHSCOPE_API_KEY\"] = \"your_API_KEY\""
    ]
   },
   {
